better image quality

--- a/index.html
+++ b/index.html
@@ -673,20 +673,19 @@
                 </div>
             </div>
 
-            <!-- Mini-Hold'em Poker AI -->
+            <!-- Royal Game of Ur -->
             <div class="project">
                 <div class="project-content">
-                    <img src="images/mini_holdem.png" alt="Mini-Hold'em Poker AI" class="project-image">
+                    <img src="images/royal_game_ur.png" alt="Royal Game of Ur AI" class="project-image">
                     <div class="project-text">
-                        <h3>Mini-Hold'Em (Coursework Project)</h3>
+                        <h3>Royal Game of Ur (Reinforcement Learning)</h3>
                         <p>
-                            In
-                            <a href="https://github.com/Omega97/MiniHoldEm">this project</a>
-                            , I tested how <b>evolutionary algorithms</b> perform in mastering
-                            <b>hidden information card games</b> of various degrees of complexity.
-                            Mini-Hold'em is a simplified version of Poker Texas Hold'Em.
-                            The bot is able to achieve human-level play for simpler versions
-                            of the game, but it struggles when variability is too high.
+                            Implemented a <b>superhuman AI</b> for the 4,000-year-old <b>Royal Game of Ur</b> using
+                            <b><a href="https://it.wikipedia.org/wiki/AlphaZero">AlphaZero-style</a>
+                            self-play reinforcement learning</b>. The agent learns exclusively through self-play,
+                            achieving strategic depth without human data.
+                            <br>
+                            <a href="https://github.com/Omega97/RoyalGameOfUr">Explore the implementation</a>.
                         </p>
                     </div>
                 </div>
@@ -715,24 +714,6 @@
                 </div>
             </div>
 
-            <!-- Royal Game of Ur -->
-            <div class="project">
-                <div class="project-content">
-                    <img src="images/royal_game_ur.png" alt="Royal Game of Ur AI" class="project-image">
-                    <div class="project-text">
-                        <h3>Royal Game of Ur (Reinforcement Learning)</h3>
-                        <p>
-                            Implemented a <b>superhuman AI</b> for the 4,000-year-old <b>Royal Game of Ur</b> using
-                            <b><a href="https://it.wikipedia.org/wiki/AlphaZero">AlphaZero-style</a>
-                            self-play reinforcement learning</b>. The agent learns exclusively through self-play,
-                            achieving strategic depth without human data.
-                            <br>
-                            <a href="https://github.com/Omega97/RoyalGameOfUr">Explore the implementation</a>.
-                        </p>
-                    </div>
-                </div>
-            </div>
-
             <!-- tisext -->
             <div class="project">
                 <div class="project-content">
@@ -748,6 +729,25 @@
                             <br>
                             Install via <code>pip install tisext</code> or
                             <a href="https://github.com/Omega97/tisext">view on GitHub</a>.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Mini-Hold'em Poker AI -->
+            <div class="project">
+                <div class="project-content">
+                    <img src="images/mini_holdem.png" alt="Mini-Hold'em Poker AI" class="project-image">
+                    <div class="project-text">
+                        <h3>Mini-Hold'Em (Coursework Project)</h3>
+                        <p>
+                            In
+                            <a href="https://github.com/Omega97/MiniHoldEm">this project</a>
+                            , I tested how <b>evolutionary algorithms</b> perform in mastering
+                            <b>hidden information card games</b> of various degrees of complexity.
+                            Mini-Hold'em is a simplified version of Poker Texas Hold'Em.
+                            The bot is able to achieve human-level play for simpler versions
+                            of the game, but it struggles when variability is too high.
                         </p>
                     </div>
                 </div>
@@ -796,7 +796,7 @@
                 <div class="project-content">
                     <img src="images/wordle.png" alt="Wordle Solver" class="project-image">
                     <div class="project-text">
-                        <h3>Wordle Solver (Entropy Minimization)</h3>
+                        <h3>Wordle Solver through Entropy Minimization (Personal Project)</h3>
                         <p>
                             A strategic helper for <b>Wordle</b> that selects guesses to maximally reduce uncertainty.
                             Built on my <a href="https://github.com/Omega97/SearchHeuristic">search heuristic</a> framework,
@@ -956,7 +956,7 @@
                             that allows you to explore how <b>steganography</b> affects the
                             individual bits of an image. The scheme that I implemented overwrites
                             the least influential bits in the image, but only in high-entropy
-                            locations.
+                            locations, to blend the changes with background noise.
                         </p>
                     </div>
                 </div>
@@ -1030,7 +1030,7 @@
                             A personal passion project: a full-fledged narrative tabletop RPG inspired by games like D&amp;D,
                             set in a unique world blending mystery, philosophy, and exploration.
                             The system emphasizes collaborative storytelling and character-driven arcs.
-                            <br><a href="https://github.com/Omega97/Shimanami">🏝 Explore the world of Shimanami</a>.
+                            <br><a href="https://github.com/Omega97/Shimanami">🏝 Explore the world of Shimanami!</a>.
                         </p>
                     </div>
                 </div>
@@ -1050,6 +1050,22 @@
                     </div>
                 </div>
             </div>
+
+            <div class="project">
+                <div class="project-content">
+                    <img src="images/my_games.png" alt="My Games" class="project-image">
+                    <div class="project-text">
+                        <h3>Game Design & Development (Personal Hobby)</h3>
+                        <p>
+                            In my free time, I enjoy designing and developing new card games and board games.
+                            This collection showcases various game mechanics, rule systems, and prototypes
+                            that I create as a creative outlet combining strategic thinking with game theory.
+                            <br><a href="https://github.com/Omega97/Omar_vault/tree/main/Games">Explore my games collection!</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
         </section>
         <hr>
 
