--- a/index.html
+++ b/index.html
@@ -1246,7 +1246,7 @@
     </section>
 
     <script>
-        fetch('tt_game_state.txt')
+        fetch('tt_game/game_state.txt')
             .then(response => {
                 if (!response.ok) throw new Error("File not found");
                 return response.text();
